--- a/frontend/src/app/admin-panel/components/admin-panel.html
+++ b/frontend/src/app/admin-panel/components/admin-panel.html
@@ -154,7 +154,7 @@
                     </thead>
                     <tbody>
                         <tr *ngFor="let post of posts" class="clickable-row">
-                            <td (click)="goTo('post', post.postUuid)">{{post.title}}</td>
+                            <td (click)="goTo('post', post.postUuid)" class="short-text">{{post.title}}</td>
                             <td (click)="goTo('post', post.postUuid)">@{{post.userName}}</td>
                             <td (click)="goTo('post', post.postUuid)">
                                 <span class="status-badge" [class.status-hide]="post.status === 'HIDE'" [class.status-exposed]="post.status === 'EPOSED'">
@@ -233,7 +233,7 @@
                         <tr *ngFor="let report of userReports" class="clickable-row"
                             (click)="goTo('profile', report.postOrUserUuid)">
                             <td>@{{report.reporterUsername}}</td>
-                            <td><span class="reason-badge">{{report.reason}}</span></td>
+                            <td><span class="reason-badge ">{{report.reason}}</span></td>
                             <td>{{report.time | date:'short'}}</td>
                         </tr>
                     </tbody>
