--- a/frontend/src/app/me/components/me.css
+++ b/frontend/src/app/me/components/me.css
@@ -104,7 +104,7 @@
 .post-preview {
   overflow: hidden;
   display: -webkit-box;
-  -webkit-line-clamp: 3;
+  -webkit-line-clamp: 1;
   -webkit-box-orient: vertical;
 }
 
@@ -614,7 +614,7 @@
 .post-image-wrapper {
   position: relative;
   width: 100%;
-  height: 350px;
+  height: 150px;
   overflow: hidden;
 }
 
@@ -722,6 +722,7 @@
 
 .post-content {
   padding: 1.25rem;
+  margin-bottom: 26px;
 }
 
 .post-content h3 {
@@ -730,6 +731,14 @@
   margin: 0 0 0.75rem 0;
   font-weight: 600;
   line-height: 1.4;
+}
+
+.short-text {
+  display: inline-block;
+  width: 8ch;          /* about 8–10 characters wide */
+  white-space: nowrap; /* keep it on one line */
+  overflow: hidden;    /* hide the rest */
+  text-overflow: ellipsis; /* add "..." at the end */
 }
 
 .post-content p {
